@@ -19,6 +19,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   ls no longer prematurely wraps lines when printing short file names.
   [bug introduced in coreutils-5.1.0]
 
+  mv no longer causes data loss due to removing a source directory specified
+  multiple times, when that directory is also specified as the destination.
+  [bug introduced in coreutils-8.24]
+
   shred again uses defined patterns for all iteration counts.
   [bug introduced in coreutils-5.93]
 
